# le-kiwi

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  claude-sandbox  install.sh
configs/: cameras.yaml  logging.yaml  robot.yaml
crates/lekiwi/: Cargo.toml
crates/lekiwi/src/: bus.rs  config.rs  main.rs  messages.rs  telemetry.rs  utils.rs
crates/lekiwi/src/services/: behavior_router.rs  cameras.rs  foxglove_server.rs  kinematics.rs  mcap_logger.rs  mod.rs  motor_bus.rs  state_estimator.rs
docs/: bringup.md  system_overview.md  systemd_plan.md  topics_and_schema.md
